--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@ARTICLE{9222560, 
+  author={Z. {Hong} and C. {Yang} and L. {Yu}},
+  journal={IEEE Transactions on Industrial Electronics}, 
+  title={R-print: A System Residuals-based Fingerprinting for Attack Detection in Industrial Cyber-physical Systems}, 
+  year={2020}, 
+  volume={}, 
+  number={},
+  pages={1-1},  
+  doi={10.1109/TIE.2020.3029488}
 }
